# vicon_bridge_ros2

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
vicon_bridge/: CMakeLists.txt  package.xml
vicon_bridge/launch/: client.launch.py
vicon_bridge/src/: communicator.cpp  publisher.cpp
